mesh/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: drupal-gateway
  namespace: mock
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "drupal.lelos.xyz"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "drupal.lelos.xyz"
      tls:
        mode: SIMPLE
        credentialName: tls-secret
