mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: drupal-virtual-service
  namespace: mock
spec:
  hosts:
    - "*"
  gateways:
    - drupal-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: nginx.dev.svc.cluster.local
